@@ -2,10 +2,11 @@ package org.robolectric.gradle
 
 import org.gradle.api.Plugin
 import org.gradle.api.Project
+import org.gradle.api.tasks.testing.Test
 
-public class AndroidProjectConfigPlugin implements Plugin<Project> {
+class AndroidProjectConfigPlugin implements Plugin<Project> {
     @Override
-    public void apply(Project project) {
+    void apply(Project project) {
         project.android.testOptions.unitTests.all {
             // TODO: DRY up code with RoboJavaModulePlugin...
             testLogging {
@@ -18,16 +19,29 @@ public class AndroidProjectConfigPlugin implements Plugin<Project> {
             }
 
             minHeapSize = "2048m"
-            maxHeapSize = "8192m"
+            maxHeapSize = "12288m"
 
             if (System.env['GRADLE_MAX_PARALLEL_FORKS'] != null) {
                 maxParallelForks = Integer.parseInt(System.env['GRADLE_MAX_PARALLEL_FORKS'])
             }
 
             def forwardedSystemProperties = System.properties
-                    .findAll { k,v -> k.startsWith("robolectric.") }
-                    .collect { k,v -> "-D$k=$v" }
+                    .findAll { k, v -> k.startsWith("robolectric.") }
+                    .collect { k, v -> "-D$k=$v" }
             jvmArgs = forwardedSystemProperties
+            jvmArgs += [
+                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+                    '--add-opens=java.base/java.io=ALL-UNNAMED',
+                    '--add-opens=java.base/java.net=ALL-UNNAMED',
+                    '--add-opens=java.base/java.security=ALL-UNNAMED',
+                    '--add-opens=java.base/java.text=ALL-UNNAMED',
+                    '--add-opens=java.base/java.util=ALL-UNNAMED',
+                    '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
+                    '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                    '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+                    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            ]
 
             doFirst {
                 if (!forwardedSystemProperties.isEmpty()) {
@@ -37,8 +51,8 @@ public class AndroidProjectConfigPlugin implements Plugin<Project> {
         }
 
         project.task('provideBuildClasspath', type: ProvideBuildClasspathTask) {
-            File outDir = new File(project.buildDir, "generated/robolectric")
-            outFile = new File(outDir, 'robolectric-deps.properties')
+            File outDir = project.layout.buildDirectory.dir("generated/robolectric").get().asFile
+            outFile = new File(outDir, "robolectric-deps.properties")
 
             project.android.sourceSets['test'].resources.srcDir(outDir)
         }
@@ -50,5 +64,11 @@ public class AndroidProjectConfigPlugin implements Plugin<Project> {
                 }
             }
         }
+
+        // Only run tests in the debug variant. This is to avoid running tests twice when `./gradlew test` is run at the top-level.
+        project.tasks.withType(Test).configureEach {
+            onlyIf { variantName.toLowerCase().contains('debug') }
+        }
     }
 }
+
